Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -999,7 +999,7 @@
     "negative-balance": "negative-balance",
     "net": "Netto",
     "new": "Nuovo",
-    "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
+    "new-acc-entry-line-p": "Puoi inserire una linea scrivendo il codice della sottoconto qui sotto o premendo il pulsante sottoconti e selezionando un sottoconto.",
     "new-address": "Nuova traduzione",
     "new-customer": "new customer",
     "new-customers": "nuovi-clienti",
@@ -1157,7 +1157,7 @@
     "plugin-needs-fs-version": "plugin-needs-fs-version",
     "plugin-not-compatible": "Plugin %pluginName% not compatible with FacturaScripts 2018.",
     "plugin-order": "Orden: %num%",
-    "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
+    "plugin-phpversion-error": "Il plugin %pluginName% richiede PHP %php% o superiore",
     "plugin-removal-disabled": "plugin-removal-disabled",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "Aggiornamento del plugin %pluginName% alla versione %version%",
@@ -1393,7 +1393,7 @@
     "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
     "small": "small",
     "smaller-than": "Più piccolo di",
-    "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
+    "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
     "social-security-number": "Social Security number",
     "sort": "Order",
     "sort-by-column": "Ordina per colonna",
