--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -6,7 +6,7 @@
     "accept-data": "Aceptar cambios u operación",
     "accept-privacy-policy": "Acepta la política de privacidad",
     "accepted": "Aceptado",
-    "accepts-emails-commas": "Acepta varios emails separados por comas",
+    "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
     "access-denied": "Acceso denegado",
     "access-denied-p": "Usted no tiene permiso para ver estos datos. Si cree que si que debería tener permiso para ver estos datos, contacte con su administrador para que le conceda permiso.",
     "account": "Cuenta",
@@ -32,11 +32,11 @@
     "accounting-entry": "Asiento",
     "accounting-entry-date": "Fecha del asiento",
     "accounting-entry-macros-text": "<p>Puede usar palabras clave especiales (macros) para auto completar información en el campo de descripción:<\/p><dl><dt>Nombre del documento<\/dt><dd>Escriba <strong>%document%<\/strong> para agregar el identificador del documento.<\/dd><dt>Fecha actual<\/dt><dd>Escriba <strong>%date%<\/strong> para agregar la fecha actual.<\/dd><dt>Fecha de entrada<\/dt><dd>Escriba <strong>%date-entry%<\/strong> para agregar la fecha del asiento contable.<\/dd><dt>Mes<\/dt><dd>Escriba <strong>%month%<\/strong> para agregar el nombre del mes de la fecha del asiento contable.<\/dd><\/dl>",
-    "accounting-entry-macros-title": "Uso de macros en el campo de descripción",
+    "accounting-entry-macros-title": "Używanie makr w polu opisu",
     "accounting-exercise-not-found": "Ejercicio no encontrado",
     "accounting-file": "Archivo de cuentas",
     "accounting-heading": "Epígrafe",
-    "accounting-heading-code": "ID Epígrafe",
+    "accounting-heading-code": "ID Nagłówka rachunku",
     "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
@@ -138,7 +138,7 @@
     "average-purchase-price": "Precio medio de compra",
     "back": "Volver",
     "background-color": "Color de fondo",
-    "background-overlay": "Color de fondo superpuesto (overlay)",
+    "background-overlay": "Kolor nakładki na tle",
     "badge": "Distintivo",
     "balance": "Saldo",
     "balance-account": "Balance Cuentas",
@@ -239,7 +239,7 @@
     "city": "Ciudad",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
     "clone": "Duplicar",
-    "clone-account-entry": "Duplicar el asiento contable",
+    "clone-account-entry": "Klonuj wpis księgowy",
     "close": "Cerrar",
     "close-box": "Cerrar caja",
     "close-exercise": "Cerrar ejercicio",
@@ -271,7 +271,7 @@
     "commercial-terms": "Términos comerciales",
     "commission": "Comisión",
     "commission-general-info": "Relación de porcentajes de comisión que se aplican en la venta de productos. Se aplicará el porcentaje con las condiciones más restrictivas o concretas de las informadas.",
-    "commission-settlement": "Liquidación de comisiones %code%",
+    "commission-settlement": "Rozliczenie prowizji %code%",
     "commissions": "Comisiones",
     "common-data": "Datos comunes",
     "common-error": "Error",
@@ -287,7 +287,7 @@
     "completed": "Completado",
     "component": "Componente",
     "concept": "Concepto",
-    "conditions": "Condiciones",
+    "conditions": "Warunki",
     "configure-columns": "Configurador de columnas",
     "confirm": "Confirmar",
     "confirm-delete": "¿Realmente desea eliminar esto?",
@@ -298,7 +298,7 @@
     "contact-information": "Información de contacto",
     "contact-person": "Persona de contacto",
     "contacts": "Contactos",
-    "context": "Contexto",
+    "context": "Kontekst",
     "continue": "Continuar",
     "contract": "Contrato",
     "contracts": "Contratos",
@@ -379,7 +379,7 @@
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
     "date": "Fecha",
     "date-in": "Fecha entrada",
-    "date-of-suspension": "Fecha de baja",
+    "date-of-suspension": "Data zawieszenia",
     "date-of-the-document": "Fecha del documento a generar",
     "date-out": "Fecha salida",
     "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
@@ -425,7 +425,7 @@
     "delivery-notes": "Albaranes",
     "delivery-notes-button": "Alb. Ptes:",
     "department": "Departamento",
-    "departments": "Departamentos",
+    "departments": "Działy",
     "desc": "Descripción",
     "desc-alfa-code-2": "Identificación oficial para los nombres de países y otras dependencias administrativas",
     "desc-alfa-code-3": "Identificación oficial para los nombres de países y otras dependencias administrativas",
@@ -521,7 +521,7 @@
     "empty-ref-or-missing": "Referencia vacía o producto no encontrado",
     "enable": "Activar",
     "enable-api": "Activar API",
-    "enable-updates-beta": "Activar actualizaciones beta",
+    "enable-updates-beta": "Włącz aktualizacje beta",
     "enabled": "Activo",
     "enabled-plugins": "Wtyczki aktywne",
     "encrypt": "Encriptación",
@@ -659,7 +659,7 @@
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
-    "general": "General",
+    "general": "Ogólny",
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
     "generate": "Generar",
@@ -812,9 +812,9 @@
     "ivarep-subaccount-not-found": "Subcuenta de IVA repercutido no encontrada",
     "ivasop-account-not-found": "Subcuenta de IVA soportado no encontrada",
     "january": "Enero",
-    "job-name": "Nombre del trabajo",
+    "job-name": "Nazwa pracy",
     "journal": "Diario",
-    "journal-closing": "Diario de cierre",
+    "journal-closing": "Dziennik zamknięcia",
     "journal-opening": "Diario de apertura",
     "journals": "Diarios",
     "july": "Julio",
@@ -921,7 +921,7 @@
     "main-address": "Dirección principal",
     "manage": "Administrar",
     "manage-installation": "Administrar",
-    "manual": "Manual",
+    "manual": "Instrukcja obsługi",
     "manufacturer": "Fabricante",
     "manufacturer-code": "Código de fabricante",
     "manufacturers": "Fabricantes",
@@ -1134,7 +1134,7 @@
     "period": "Periodo",
     "personalized": "Personalizado",
     "phase": "Faza",
-    "phone": "Teléfono",
+    "phone": "Telefon",
     "phone2": "Teléfono 2",
     "phones": "Teléfonos",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
@@ -1191,7 +1191,7 @@
     "print-price": "Imprimir precios",
     "print-quantity": "Imprimir cantidad",
     "printed": "Impreso",
-    "printing-format": "Formato de impresión",
+    "printing-format": "Format druku",
     "printing-formats": "Formatos de impresión",
     "priority": "Prioridad",
     "private": "Privado",
@@ -1334,7 +1334,7 @@
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
-    "selected-quantity": "Cant. seleccionada",
+    "selected-quantity": "Ilość wybrana",
     "selector-number": "Wybierający numer",
     "send": "Enviar",
     "send-anonymous-data": "Wysyłanie anonimowych danych",
@@ -1364,7 +1364,7 @@
     "series": "Series",
     "server": "Servidor",
     "service": "Servicio",
-    "services": "Servicios",
+    "services": "Usługi",
     "settings": "Ajustes",
     "settlement": "Liquidación",
     "settlement-product": "Producto de liquidación",
@@ -1527,7 +1527,7 @@
     "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Zona horaria",
-    "title": "Título",
+    "title": "Tytuł",
     "title-font-size": "Tamaño fuente título",
     "title-url": "Título (URL)",
     "to": "Para",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "Valor total IRPF de %docType% %docCode% incorrecto (%docTotalIRPF%). Valor correcto: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
-    "totals": "Totales",
+    "totals": "Całkowite",
     "town": "Población",
     "tracking-code": "Código seguimiento",
     "transfer": "Transferencia",
