--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -228,7 +228,7 @@
     "children": "Criança",
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
-    "choose-doc-type": "Choose document type",
+    "choose-doc-type": "Escolher tipo de documento",
     "choose-employee": "Choose employee",
     "choose-files": "Escolher arquivos",
     "choose-payment-method": "Choose payment method",
@@ -272,7 +272,7 @@
     "commission": "commission",
     "commission-general-info": "commission-general-info",
     "commission-settlement": "commission-settlement",
-    "commissions": "commissions",
+    "commissions": "Comissões",
     "common-data": "Dados comuns",
     "common-error": "Erro",
     "companies": "Empresas",
@@ -329,7 +329,7 @@
     "create-accounting-entry": "Criar lançamento contábil",
     "create-delivery-note": "Crear albarán",
     "create-estimation": "Crear presupuesto",
-    "create-invoice": "Crear factura",
+    "create-invoice": "Criar fatura",
     "create-new-record": "Criar novo registro",
     "created": "Created",
     "created-default-admin-account": "O utilizador <b> admin <\/b> foi criado com a senha <b> admin <\/b>.",
@@ -408,7 +408,7 @@
     "default-tax": "default-tax",
     "default-to-company-email": "Por defecto al email de la empresa",
     "default-to-user-email": "Por defecto al email del usuario",
-    "default-warehouse": "default-warehouse",
+    "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
     "delete-all": "delete-all",
     "delete-closing": "delete-closing",
@@ -542,7 +542,7 @@
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
-    "error-saving-lines": "error-saving-lines",
+    "error-saving-lines": "Erro ao salvar as linhas",
     "error-saving-stock": "¡Erro ao economizar estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
@@ -599,7 +599,7 @@
     "family": "Família",
     "family-code": "Código familiar",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Fevereiro",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
@@ -750,7 +750,7 @@
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "in-progress": "Em andamento",
     "in-stock": "in-stock",
     "inactive": "Inativo",
     "income-and-expenses": "Income and Expenses",
@@ -772,7 +772,7 @@
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
-    "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
+    "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
@@ -817,7 +817,7 @@
     "journal-closing": "journal-closing",
     "journal-opening": "journal-opening",
     "journals": "Journals",
-    "july": "Julio",
+    "july": "Julho",
     "june": "Junio",
     "justified": "justified",
     "key-google-maps": "Clave de Google Maps",
@@ -865,7 +865,7 @@
     "last-year": "Último ano",
     "latitude": "Latitude",
     "latitude-abb": "Lat",
-    "ledger": "Ledger",
+    "ledger": "Razão",
     "left": "Left",
     "level": "Level",
     "level-benefit-sales": "Nivel para ver beneficios",
@@ -888,7 +888,7 @@
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
     "lock-invoice": "Bloquear fatura",
-    "lock-unlock": "Lock-Unlock",
+    "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Bloqueado",
     "log": "Log",
@@ -1056,7 +1056,7 @@
     "offsetting-account": "Offsetting account",
     "only-active": "only-active",
     "only-charged": "only-charged",
-    "only-closed": "only-closed",
+    "only-closed": "Apenas fechado",
     "only-insert": "Sólo añadir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
@@ -1314,7 +1314,7 @@
     "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Vendas",
-    "sales-invoice": "sales-invoice",
+    "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
     "sales-subaccount-not-found": "sales-subaccount-not-found",
     "same-group": "Mesmo grupo",
@@ -1324,7 +1324,7 @@
     "save-filter": "Salvar Filtros",
     "sdk": "sdk",
     "search": "Pesquisa",
-    "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-document": "Digite o número de %doctype% para pesquisar.",
     "search-product": "Search product",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
@@ -1335,7 +1335,7 @@
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
-    "selector-number": "Selector",
+    "selector-number": "Seletor",
     "send": "send",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
@@ -1358,7 +1358,7 @@
     "sequences": "sequences",
     "serial-number": "Número de Série",
     "serie": "Série",
-    "serieb": "Serie B",
+    "serieb": "Série B",
     "serier": "Série R",
     "serierb": "Série RB",
     "series": "Séries",
@@ -1523,7 +1523,7 @@
     "this-year": "Este ano",
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
-    "ticket": "Ticket",
+    "ticket": "Bilhete",
     "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
