--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -486,7 +486,7 @@
     "dont-sell-below-cost": "No vendre per baix del cost",
     "download": "Descarregar",
     "download-completed": "Descàrrega finalisada",
-    "download-error": "Error en descarregar. Codi %status% - %error%",
+    "download-error": "Error en la descàrrega. Codi %status% - %error%",
     "download-xml": "Descarregar XML",
     "downloads": "Descàrregues",
     "drag": "Arrastrar",
@@ -711,7 +711,7 @@
     "group-or-split-p": "Aquest assistent permet generar un nou document a partir de les línies d'uns altres. Seleccione les quantitats que desitja usar, la data del nou document i prema el botó generar.",
     "grouping-type": "Agrupación",
     "groups": "Grups",
-    "has-attachments": "Tiene adjuntos",
+    "has-attachments": "Té adjunts",
     "has-parent": "has-parent",
     "hash": "Hash",
     "header": "Capçalera",
@@ -935,7 +935,7 @@
     "maximum-amount-with-cifnif": "Màxim import amb CIF\/NIF",
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Estoc màxim",
-    "may": "Mayo",
+    "may": "Maig",
     "mega-search": "MegaCercador",
     "memcache": "Memcache",
     "memcache-clear": "S'ha netejat la Memcache.",
@@ -969,7 +969,7 @@
     "month-1": "Enero",
     "month-10": "Octubre",
     "month-11": "Novembre",
-    "month-12": "Diciembre",
+    "month-12": "Desembre",
     "month-2": "Febrer",
     "month-3": "Marzo",
     "month-4": "Abril",
@@ -1275,7 +1275,7 @@
     "reloading": "Recarregant...",
     "remove-filter": "remove-filter",
     "remove-from-list": "Treure",
-    "removing-logs-until": "Eliminando logs hasta el %date%",
+    "removing-logs-until": "Eliminant registres fins al %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar els assentaments",
@@ -1354,7 +1354,7 @@
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "Sufix SEPA",
-    "september": "Septiembre",
+    "september": "Setembre",
     "sequences": "Sequències",
     "serial-number": "Número de Série",
     "serie": "Série",
@@ -1437,7 +1437,7 @@
     "subaccount-bad-codcuenta": "L",
     "subaccount-belongs-other-year": "El subcompte %subAccountCode% pertany a un altre eixercici.",
     "subaccount-irpf": "Conte per a les retencions",
-    "subaccount-irpf-creditor": "Conte de l'acreedor de IRPF",
+    "subaccount-irpf-creditor": "Subcompte de retencions per a compres",
     "subaccount-not-found": "No s'ha trobar el subconte %subAccountCode%.",
     "subaccount-purchases": "Conte per a les compres",
     "subaccount-pyg-not-found": "Subcompte de pèrdues i guanys no trobada",
