--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -272,7 +272,7 @@
     "commission": "commission",
     "commission-general-info": "commission-general-info",
     "commission-settlement": "commission-settlement",
-    "commissions": "commissions",
+    "commissions": "Comissões",
     "common-data": "Dados comuns",
     "common-error": "Erro",
     "companies": "Empresas",
@@ -310,7 +310,7 @@
     "conversion-rate": "Conversion rate",
     "conversion-rate-not-0": "A taxa de conversão não pode ser 0.",
     "convert-into-customer": "Converte a cliente",
-    "convert-into-supplier": "convert-to-supplier",
+    "convert-into-supplier": "Converter em fornecedor",
     "cookies": "Cookies",
     "copy": "Copiar",
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
@@ -408,7 +408,7 @@
     "default-tax": "default-tax",
     "default-to-company-email": "Por defecto al email de la empresa",
     "default-to-user-email": "Por defecto al email del usuario",
-    "default-warehouse": "default-warehouse",
+    "default-warehouse": "Armazém predefinido",
     "delete": "Remover",
     "delete-all": "Eliminar tudo",
     "delete-closing": "delete-closing",
@@ -542,7 +542,7 @@
     "error-on-xml-file": "Error on XML file %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
-    "error-saving-lines": "error-saving-lines",
+    "error-saving-lines": "Erro ao salvar as linhas",
     "error-saving-stock": "¡Erro ao economizar estoque!",
     "error-to-innodb": "Tabela de conversão de erros para InnoDB.",
     "error-updating-product-stock": "Erro ao atualizar o estoque do produto",
@@ -599,7 +599,7 @@
     "family": "Família",
     "family-code": "Código familiar",
     "fax": "Fax",
-    "february": "Febrero",
+    "february": "Fevereiro",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
@@ -682,7 +682,7 @@
     "generated-customer-orders": "0 ordens de clientes geradas.",
     "generated-customers": "0 clientes gerados.",
     "generated-families": "0 famílias geradas.",
-    "generated-invoice": "generated-invoice",
+    "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "0 fabricantes gerados.",
     "generated-products": "0 produtos gerados.",
     "generated-subaccounts": "0 sub-contas geradas.",
@@ -750,7 +750,7 @@
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Fichero de importación",
-    "in-progress": "En progreso",
+    "in-progress": "Em andamento",
     "in-stock": "in-stock",
     "inactive": "Inativo",
     "income-and-expenses": "Income and Expenses",
@@ -772,7 +772,7 @@
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
-    "invalid-column-lenght": "%column% must have between %min% and %max% characters.",
+    "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
@@ -817,7 +817,7 @@
     "journal-closing": "journal-closing",
     "journal-opening": "journal-opening",
     "journals": "Journals",
-    "july": "Julio",
+    "july": "Julho",
     "june": "Junio",
     "justified": "justified",
     "key-google-maps": "Chave do Google Maps",
@@ -888,7 +888,7 @@
     "lock-accounting": "lock-accounting",
     "lock-entry": "lock-entry",
     "lock-invoice": "Bloquear fatura",
-    "lock-unlock": "Lock-Unlock",
+    "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
     "locked": "Bloqueado",
     "log": "Log",
@@ -993,7 +993,7 @@
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
     "name": "Nome",
-    "name-or-business-name": "Name or Bussine name",
+    "name-or-business-name": "Nome ou Razão Social",
     "nature": "Natureza",
     "need-help-password": "Você precisa ajuda com a sua senha?",
     "negative-balance": "Saldo Negativo",
@@ -1005,7 +1005,7 @@
     "new-customers": "Novos Clientes",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
     "new-password": "Nova senha",
-    "new-price": "new-price",
+    "new-price": "Novo preço",
     "new-refund": "Nova Devolução",
     "new-supplier": "Novo Fornecedor",
     "news": "Notícia",
@@ -1056,7 +1056,7 @@
     "offsetting-account": "Offsetting account",
     "only-active": "only-active",
     "only-charged": "only-charged",
-    "only-closed": "only-closed",
+    "only-closed": "Apenas fechado",
     "only-insert": "somente-inserir",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
@@ -1314,7 +1314,7 @@
     "run": "executar",
     "running-plugin-cron": "Running FacturaScripts cron for plugin %pluginName%",
     "sales": "Vendas",
-    "sales-invoice": "sales-invoice",
+    "sales-invoice": "Fatura de vendas",
     "sales-rate": "Taxa de vendas",
     "sales-subaccount-not-found": "sales-subaccount-not-found",
     "same-group": "Mesmo grupo",
@@ -1335,7 +1335,7 @@
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Select User",
     "selected-quantity": "approve-quantity",
-    "selector-number": "Selector",
+    "selector-number": "Seletor",
     "send": "send",
     "send-anonymous-data": "Enviar datos anónimos",
     "send-audios": "Enviar audios",
@@ -1523,7 +1523,7 @@
     "this-year": "Este ano",
     "thousands-separator": "Milhares",
     "thursday": "quinta-feira",
-    "ticket": "Ticket",
+    "ticket": "Bilhete",
     "tickets": "Tickets",
     "time": "Hora",
     "timezone": "Selecione fuso horário",
